# PyFlow-Solver

./: .env  .gitignore  CFD_CONVERSATION_LOG.md  CFD_CONVERSATION_LOG_APPEND.md  CONFIGURATION.md  PROJECT_CHAT_LOG.md  README.md  README_TEST_HARNESS.md  README_projection.md  autorun_tests_4h.ps1  autorun_tests_autofix_4h.ps1  collect_pytest_errors.ps1  demo.py  discrepancy_report.txt  discrepancy_report_detailed.txt  emergency_FAIL_NAN_it0.npz  full_test_output.txt  legacy_run.txt  log_terminal_output.ps1  mypy.ini  poisson_manufactured_test.py  poisson_ms_results.json  poisson_perf_metrics.json  pyproject.toml  pytest.ini  pytest_artifact.ps1  pytest_auto_update.ps1  pytest_punchlist.ps1  terminal_artifact.ps1
cfd_solver_new/: .gitignore  CHANGELOG.md  PROJECT_STATUS.md  REPORT_operator_discrepancy_phase3.md  pyproject.toml  pytest.ini  requirements.txt  run_lid_cavity.py
cfd_solver_new/docs/: conversation_log.md  structure.md
cfd_solver_new/src/boundary_conditions/: __init__.py
cfd_solver_new/src/io/: __init__.py
cfd_solver_new/src/mesh/: __init__.py
cfd_solver_new/src/numerics/: __init__.py
cfd_solver_new/src/pyflow/: cli.py
cfd_solver_new/src/solvers/: __init__.py
cfd_solver_new/tests/: test_ai_control_layer.py  test_benchmark_harness.py  test_checkpoint_hashes.py  test_cli_json_stream.py  test_core_ops_coherent.py  test_nan_detection_logging.py  test_projection_coherent.py  test_seed_reproducibility.py  test_simulation_driver.py  test_utils.py
cfd_solver_new/tests/legacy/: test_lid_driven_cavity_re100.py
salvage/: CHANGELOG.md  Colab_Postmortem.md  DEPENDENCY_MATRIX.md  FAILURE_CATALOG.md  Failures_Postmortem.md  GLOSSARY.md  Master_Postmortem.md  PRECOMMIT_COMPLEXITY_REPORT.md  PROJECT_CHAT_LOG.md  PROJECT_STATUS.md  README.md  TESTS_OVERVIEW.md  TEXTBOOK_OUTLINE.md  TextFrameworks_Postmortem.md  VS_Studio_Postmortem.md  WORKFLOW_CFD_REFINEMENTS_V23_V122.md  WORKFLOW_CFD_SOLVER_PLAN.md  cfd_knowledge.db  cfd_scaffold_recommendation.md  deeper_analysis_report.md  deeper_metrics.json  dependency_graph.json  evolution_chains.json  evolution_tag_summary.json  extended_learning_dataset.jsonl  extended_report.md  failure_taxonomy.json  function_catalog.csv  import_cooccurrence.json  learning_dataset.jsonl  learning_dataset_summary.json  learning_report.md  module_centrality.json  orphan_salvage.jsonl  pattern_snippets.json  perf_baseline.json  poisson_ms_results.json  poisson_perf_metrics.json  pyproject.toml  pytest.ini  (+5 more)
salvage/.generated_hooks/: pre-commit
salvage/.github/workflows/: ci.yml  ci.yml.disabled
salvage/Colab/: CPSAIL_Version_0_002_Prototype_.ipynb  Lid_.ipynb  PyCFDflow2_v8ipynb (1).ipynb  PyCFDflow2_v9ipynb.ipynb  _12.py  cfd 22.txt  cfd_v021.py  cpsail_version_0_010_prototype_.py  cpsail_version_0_015_prototype_.py  lid 4.txt  lid1.txt  lid2.txt  lid_ (1).py  lid_a1_ (1).py  lid_a1_.py  py4.txt  py5.txt  pycfdflow2_v3.py  pycfdflow2_v4 (1).py  pycfdflow2_v4.py  pycfdflow2_v5.py  pycfdflow2_v8ipynb (1).py
salvage/Colab/set1 1-15/: 1.txt  10 combo cpsail finitude.txt  11-d.txt  12.txt  13cpb.txt  14cpb.txt  17pcb.txt  18pcb.txt  2.txt  20ccp.txt  22 ccp.txt  23 fc.txt  26 ccp.txt  27 cp.txt  29 cp.txt  4.txt  5.txt  9-d.txt  CPSAIL_FINITUDE_version_0_001_14 (1).ipynb  CPSAIL_FINITUDE_version_0_001_14.ipynb  CPSAIL_FINITUDE_version_0_002_14.ipynb  CPSAIL_Version_0_003_Prototype_.ipynb  cp31.txt  logs 1.txt
salvage/Legacy/: Dosidon 11 Final v10.3.txt  Dosidon 9.6 File 2.txt  Dosidon 9.6 File 5.txt  Dosidon 9.7.4 File 6.txt  Dosidon 9.7.6 File 7.txt  Super-Sub-Quantum Field Theory White Paper By Dmitry Martynov July 30th 2025.txt  new1 (5).txt  new1 (6).txt  new1 (7).txt  xriv.txt
salvage/Legacy/10.4/: CPSAIL v0.01.txt  CPSAIL v0.03 LDF ( Log Database File ).txt  CPSAIL v0.03.txt  CPSAIL v0.04.txt  Dosidon 14 final fail log.txt  fail log 23.txt  fail log 25.txt
salvage/Legacy/a/: titanic.csv  titanic.txt
salvage/Legacy/dos logs/: Dosidon 4.1 File 1.txt  Dosidon 4.3 File 2.txt  Dosidon 4.7 File 3.txt  Dosidon 6.0 File 4.txt  (+6 more)
salvage/VS Studio/: test_run_results.json
salvage/book/: generate_chapter_skeletons.py
salvage/cfd_core/: reusable_funcs.py
salvage/conversation_logs/: conversation_log.md
salvage/dosidon_solver/: README.md  __init__.py  core.py  interface.py  utils.py
salvage/framework/: advection.py  boundaries.py  config.py  diffusion_driver.py  logging.py  projection_solver.py  residuals.py  state.py  steady_diffusion.py  synthetic_guard.py
salvage/knowledge_db/: files.jsonl  functions.jsonl  tfidf_index.json  vocab.json
salvage/knowledge_lib/: CPSAIL_FINITUDE_version_0_003_14 (1).ipynb  CPSAIL_Version_0_003_Prototype_ (2).ipynb  CPSAIL_Version_0_005_Prototype_.ipynb  Finitude.ipynb  PROJECT_FILE_TREE.txt  README.md  _12 (1).py  _12.py  __init__.py  ai_training_prompt.txt  analytics.py  build_cfd_knowledge_db.py  build_semantic_index.py  conftest.py  cpsail_b_prototype_ (3).py  cpsail_b_prototype_.py  cpsail_c_prototype_ (1).py  cpsail_finitude_14 (1).py  cpsail_finitude_14 (2).py  cpsail_finitude_version_0_003_14.py  cpsail_prototype_ (4).py  cpsail_version_0_001_prototype_.py  cred.txt  export_sqlite_db.py  failure_logging_helper.py  finitude_fortran_ (1).py  finitude_language_12 (1).py  generate_deeper_analysis.py  generate_learning_dataset.py  generate_learning_dataset_extended.py  generate_precommit_hook.py  guardrails.py  poisson_manufactured_test.py  post mort cfd.txt  postmortem_workspace.py  qa_query.py  requirements.txt  salvage.py  salvage_and_guardrails.py  semantic_query.py  (+2 more)
salvage/playground/: INDEX.md  README.md  adaptive_dt_pid_sim.py  aggregate_dashboard.py  config_schema_validator.py  duplication_similarity_demo.py  embedding_similarity_demo.py  failure_injection_harness.py  manufactured_solution_order.py  microbench_kernels.py  multi_objective_tuner_demo.py  render_dashboard_md.py  residual_plateau_classifier_demo.py  run_fast_checks.py  stencil_symmetry_audit.py
salvage/pytest_reports/: junit.xml
salvage/scripts/: README.md  main.py  perf_projection.py  update_perf_baseline.py
(+6690 files in other folders)
