[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyflow-cfd"
version = "0.1.0"
description = "Educational CFD projection solver with CLI, dashboard, AI control, and robustness roadmap"
readme = "README.md"
authors = [{ name = "PyFlow Team" }]
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
	"Programming Language :: Python :: 3",
	"Topic :: Scientific/Engineering :: Physics",
	"Intended Audience :: Science/Research"
]
dependencies = [
	"numpy==1.26.4",
	"scipy==1.13.1"
]

[project.optional-dependencies]
dash = ["dash==2.17.1", "plotly==5.23.0"]
dev = [
	"pytest>=7.4",
	"ruff>=0.6.4",
	"mypy>=1.10",
	"types-setuptools",
	"numpy==1.26.4",
	"scipy==1.13.1"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyflow]
# Future: generalized mesh toggle, checkpoint frequency defaults, logging config

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.ruff]
target-version = "py310"
line-length = 100
fix = false
select = [
	"E","F","I","UP","B","SIM","PTH","RUF"
]
ignore = ["E203","E501"]

[tool.ruff.isort]
known-first-party = ["pyflow"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
strict_optional = true
namespace_packages = true
packages = ["pyflow"]
exclude = ["tests/.*"]
