[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyflow-cfd"
version = "0.1.0"
description = "Educational CFD projection solver with CLI, dashboard, AI control, and robustness roadmap"
readme = "README.md"
authors = [{ name = "PyFlow Team" }]
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
	"Programming Language :: Python :: 3",
	"Topic :: Scientific/Engineering :: Physics",
	"Intended Audience :: Science/Research"
]
dependencies = [
	"numpy==1.26.4",
	"scipy==1.13.1",
	"pydantic>=2.7,<3"
]

[project.scripts]
pyflow = "pyflow.cli:main"

[project.optional-dependencies]
dash = ["dash==2.17.1", "plotly==5.23.0"]
dev = [
	"pytest>=7.4",
	"ruff>=0.6.4",
	"mypy>=1.10",
	"types-setuptools",
	"numpy==1.26.4",
	"scipy==1.13.1"
]
config = [
	"pydantic>=2.7,<3"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyflow]
# Future: generalized mesh toggle, checkpoint frequency defaults, logging config

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.ruff]
target-version = "py310"
line-length = 100
fix = false
select = ["E","F","I"]
# Temporarily ignore broad stylistic and optional modernization families to get CI green.
# We'll narrow this list (and re-enable groups like SIM, PTH, B, UP, RUF codes) in a follow-up
# formatting pass. Tests are excluded for now to avoid large style churn in legacy test code.
ignore = [
	"E203","E501",  # formatting / line length handled by Black settings
	"E402","E701","E702","E741",  # import position & single-line statements / ambiguous var names
	"RUF001","RUF002","RUF005","RUF022",  # unicode hyphen, docstring hyphen, list concatenation, __all__ sort
	"SIM102","SIM105","SIM108","SIM115",  # nested if, try/except pass, ternary suggestions, context mgr suggestions
	"PTH103","PTH105","PTH107","PTH110","PTH120","PTH123",  # pathlib migration suggestions
	"UP006","UP035","UP038",  # typing modernizations
	"B010","B904","B905"  # setattr constant, raise from, zip strict
]
exclude = ["tests"]

[tool.ruff.isort]
known-first-party = ["pyflow"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
strict_optional = true
namespace_packages = true
packages = ["pyflow"]
exclude = ["tests/.*"]
